# Voice-AI-Observability-Copilot

./: README.md  architecture.md  docker-compose.yml  main.py  todo.md
.github/workflows/: azure-backend.yml  azure-deploy.yml  azure-static-web-apps-wonderful-bush-09e135000.yml
backend/: Dockerfile  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/config/: db.py
backend/app/middleware/: auth.py
backend/app/models/: action.py  agent.py  audit_result.py  call_log.py  evaluation.py
backend/app/routers/: analytics.py  auth.py  dashboard.py  webhook.py
backend/app/services/: auditor.py  openai_auth.py
backend/app/tests/: conftest.py  run_tests.py  test_webhook.py
frontend/: index.html
